@@ -24,7 +24,7 @@ import org.openrewrite.java.tree.JRightPadded;
 import org.openrewrite.java.tree.Statement;
 import org.openrewrite.test.AdHocRecipe;
 
-import java.util.List;
+import java.util.Collections;
 
 import static org.openrewrite.test.RewriteTest.toRecipe;
 
@@ -51,9 +51,9 @@ public class JavaToCsharp {
           cu.getCharset().name(),
           cu.isCharsetBomMarked(),
           cu.getChecksum(),
-          List.of(),
-          List.of(),
-          List.of(),
+          Collections.emptyList(),
+          Collections.emptyList(),
+          Collections.emptyList(),
           cu.getClasses().stream()
             .map(Statement.class::cast)
             .map(JRightPadded::build)
